2001-02-03  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/ucomics (ucomics): Replaced calvin-n-hobbes with ucomics
	thanks to Ian Campbell.
	(ucross): Added ucomics' daily crossword puzzle.
	* lib/doonesbury (doon): Fixed typos
	* lib/sketch (sketch): Added Sketch of Love thanks to Max Zomborszki.
	Added excpetions lists.
	* doc/Comic_Module-HOWTO.html: Updated information about how RLIs
	returned by functions are processed.
	* lib/template: Encourage use of $baseurl.
	* lib/lcd (lcd): Added LCD thanks to Max Zomborszki.
	Added exceptions lists.
	* lib/bad_boys (badboys): Updated thanks to Max Zomborszki.
	* lib/helen (helen): Updated thanks to Max Zomborszki.
	* lib/angst (angst): Updated thanks to Max Zomborszki.

2001-01-21  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/sluggy_freelance (sluggy): Updated thanks to Martial Michel,
	plus simplified by having all days of the week use the function
	to return multiple URLs.
	* netcomics (get_comics): Updated RELURL section so that it would
	detect when both an rli and relurls were returned, and made it so
	that it could handle ARRAY refs. Added defaulting the file type if
	none was supplied in the rli.
	* lib/down_earth (downearth): Updated thanks to Martial Michel,
	plus added an exceptions table, made file extension case
	insensitive, and added a multi image returning function for the
	one date that has multiple images for it.
	* Makefile (clean): Added removing tmp files left behind by cvs.

2001-01-16  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/alice: Changed days behind for Alice to 0 thanks to  
	Sven Hartge.

2001-01-09  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile (MODULES): Added modules just added: rogues,
	road_waffles, boxjam, megatokyo, angst, and bad_boys.

2001-01-07  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/doonesbury (doon): Updated for site changes thanks to
	Brent Nordquist.
	* lib/rogues (rocr): Added Rogues of Clywd-Rhan thanks to